@@ -1,4 +1,6 @@
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Random;
 
@@ -53,34 +55,21 @@ public class Ag {
     }
 
     private List<Individuo> aplicarMutacao(List<Individuo> populacaoInicial) {
-        List<Individuo> mutantes = new ArrayList<>();
-        for (int j = 0; j < populacaoInicial.size(); j++) 
-            mutantes.add(populacaoInicial.get(j).mutar());
-        return mutantes;
+        return populacaoInicial.parallelStream()
+                .map(Individuo::mutar)
+                .collect(ArrayList::new, ArrayList::add, ArrayList::addAll);
     }
 
     private List<Individuo> aplicarElitismo(int numElite, List<Individuo> join) {
         List<Individuo> eliteList = new ArrayList<>();
-        if (join.get(0).isMaximizacao()) { // maximizacao -> crescente
-            for (int j = 0; j < join.size() - 1; j++)
-                for (int j2 = j; j2 < join.size(); j2++)
-                    if (join.get(j).getAvaliacao() > join.get(j2).getAvaliacao()) {
-                        Individuo aux = join.get(j);
-                        join.set(j, join.get(j2));
-                        join.set(j2, aux);
-                    }
-        } else { // minimizacao -> decrescente
-            for (int j = 0; j < join.size() - 1; j++)
-                for (int j2 = j; j2 < join.size(); j2++)
-                    if (join.get(j).getAvaliacao() < join.get(j2).getAvaliacao()) {
-                        Individuo aux = join.get(j);
-                        join.set(j, join.get(j2));
-                        join.set(j2, aux);
-                    }
+        if (join.get(0).isMaximizacao()) { // maximizacao -> decrescente (maior primeiro)
+            Collections.sort(join, Comparator.comparingDouble(Individuo::getAvaliacao).reversed());
+        } else { // minimizacao -> crescente (menor primeiro)
+            Collections.sort(join, Comparator.comparingDouble(Individuo::getAvaliacao));
         }
         // join precisa ser alterado para eles individuos nao disputarem na roleta
         for (int j = 0; j < numElite; j++)
-            eliteList.add(join.removeLast());
+            eliteList.add(join.remove(0)); // remove o melhor (primeiro)
         return eliteList;
     }
 
@@ -92,51 +81,70 @@ public class Ag {
 
     private List<Individuo> aplicarRoletaMaximizacao(List<Individuo> join, int quantidade) {
         List<Individuo> selecionados = new ArrayList<>(quantidade);
+        // Pré-calcular somatório e probabilidades cumulativas
+        double[] cumulativas = new double[join.size()];
+        double somaTotal = 0;
+        for (int k = 0; k < join.size(); k++) {
+            somaTotal += join.get(k).getAvaliacao();
+            cumulativas[k] = somaTotal;
+        }
         for (int j = 0; j < quantidade; j++) {
-            double somatorioAvaliacoes = 0;
-            for (int k = 0; k < join.size(); k++)
-                somatorioAvaliacoes += join.get(k).getAvaliacao();
-
-            double soma = 0;
-            double sorteado = random.nextDouble(somatorioAvaliacoes);
+            double sorteado = random.nextDouble() * somaTotal;
             Individuo escolhido = null;
             for (int k = 0; k < join.size(); k++) {
-                soma += join.get(k).getAvaliacao();
-                if (soma >= sorteado) {
+                if (cumulativas[k] >= sorteado) {
                     escolhido = join.get(k);
                     break;
                 }
             }
             selecionados.add(escolhido);
             join.remove(escolhido);
+            // Recalcular cumulativas após remoção
+            somaTotal = 0;
+            for (int k = 0; k < join.size(); k++) {
+                somaTotal += join.get(k).getAvaliacao();
+                cumulativas[k] = somaTotal;
+            }
         }
         return selecionados;
     }
 
     private List<Individuo> aplicarRoletaMinimizacao(List<Individuo> join, int quantidade) {
-        // considera-se o inverso multiplicativo dos getAvaliacao para realizar as somas
         List<Individuo> selecionados = new ArrayList<>(quantidade);
+        // Pré-calcular somatório e probabilidades cumulativas
+        double[] cumulativas = new double[join.size()];
+        double somaTotal = 0;
+        for (int k = 0; k < join.size(); k++) {
+            double aval = join.get(k).getAvaliacao();
+            double prob = (aval == 0) ? Double.MAX_VALUE / join.size() : 1.0 / aval;
+            somaTotal += prob;
+            cumulativas[k] = somaTotal;
+        }
+        if (Double.isInfinite(somaTotal)) {
+            somaTotal = Double.MAX_VALUE / join.size() * join.size();
+        }
         for (int j = 0; j < quantidade; j++) {
-            double somatorioAvaliacoes = 0;
-            for (int k = 0; k < join.size(); k++)
-                somatorioAvaliacoes += (1 / join.get(k).getAvaliacao());
-
-            double soma = 0;
-            // valores muito pequenos podem ser interpretados como zero e/ou negativos
-            // resultando em Infinito
-            if (Double.isInfinite(somatorioAvaliacoes))
-                somatorioAvaliacoes = Double.MIN_VALUE;
-            double sorteado = random.nextDouble(somatorioAvaliacoes);
+            double sorteado = random.nextDouble() * somaTotal;
             Individuo escolhido = null;
             for (int k = 0; k < join.size(); k++) {
-                soma += (1 / join.get(k).getAvaliacao());
-                if (soma >= sorteado) {
+                if (cumulativas[k] >= sorteado) {
                     escolhido = join.get(k);
                     break;
                 }
             }
             selecionados.add(escolhido);
             join.remove(escolhido);
+            // Recalcular cumulativas após remoção
+            somaTotal = 0;
+            for (int k = 0; k < join.size(); k++) {
+                double aval = join.get(k).getAvaliacao();
+                double prob = (aval == 0) ? Double.MAX_VALUE / join.size() : 1.0 / aval;
+                somaTotal += prob;
+                cumulativas[k] = somaTotal;
+            }
+            if (Double.isInfinite(somaTotal)) {
+                somaTotal = Double.MAX_VALUE / join.size() * join.size();
+            }
         }
         return selecionados;
     }
@@ -173,13 +181,5 @@ public class Ag {
 
     private void imprimirIndividuo(int geracao, Individuo individuo) {
         System.out.println(" Geracao: " + (geracao + 1) + "° .... " + individuo.toString());
-    }
-
-    private void imprimirUltimaGeracao(List<Individuo> populacaoInicial) {
-        System.out.println("\nÚltima geração inteira: ");
-        for (int i = 0; i < populacaoInicial.size(); i++) {
-            System.out.println(populacaoInicial.get(i).toString());
-        }
-        System.out.println();
     }
 }
